# TUFF-CSE-WinFS

./: .gitignore  Cargo.toml  README.md
docs/: BASIC_DESIGN.md  CODEX_P8B_LIVE_DRIVER_UNINSTALL_TASK.md  DETAILED_DESIGN.md  DRAFT_READ_CREDENTIAL_MINIMIZATION.md  PUBLIC_RELEASE_ARTIFACTS.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RELEASE_NOTES_TEMPLATE.md  PUBLIC_WINDOWS_INSTALLER.md  RC2_DRAFT_RELEASE_EVIDENCE.md  RC_TAG_AND_DRAFT_RELEASE.md  V1_BOUNDARY_MANIFEST.md  V1_FORBIDDEN_BOUNDARY.md  V1_RC_RELEASE_GATE.md
examples/: binding-policy.example.json  cse-install-policy.example.json  enterprise-authority-policy.example.json  enterprise-provider-attestation.example.json  enterprise-provider-lifecycle-event.example.json  enterprise-provider-policy.example.json  enterprise-provider-rotation-plan.example.json  enterprise-quorum-policy.example.json  enterprise-recovery-decision.example.json  export-policy.example.json  local-policy.example.json  managed-policy.example.json  rebind-policy.example.json  recovery-policy.example.json  v1-rc-smoke-policy.example.json
release/: DRAFT_RELEASE_ASSET_POLICY.md  P7H_DRAFT_READ_CREDENTIAL_EVIDENCE.schema.json  RC_TAG_POLICY.md  README.md  V1_RC_ARTIFACT_MANIFEST.template.json  V1_RC_CHECKSUMS.template.sha256  V1_RC_DRAFT_RELEASE_EVIDENCE.schema.json  V1_RC_DRAFT_RELEASE_INPUT.template.json  V1_RC_RELEASE_NOTES.md  build-release-manifest.ps1  create-draft-github-release.ps1  verify-draft-read-credential.ps1  verify-draft-release-inputs.ps1  verify-existing-draft-release.ps1  verify-release-artifacts.ps1
src/: approval_enforcement.rs  (+50 more)
(+57 files in other folders)
