[package]
name = "tuff-cse-winfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tuff_cse_winfs"
path = "src/lib.rs"

[[bin]]
name = "TuffCseWinFsSetup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
rand = "0.8"
tempfile = "3"
md5 = "0.8.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = "0.6"
thiserror = "1"
